增加zookeeper分布式锁